# SQLModel-SQLalchemy-API

./: main.py  pyproject.toml
API_requests/: exemplo_00.py
API_requests/src/: controller.py  db.py  main.py  models.py  pokemon.db  schema.py
FastAPI/: main.py  models.py  schema.py
SQL_Alchemy/: desafio.py  exemplo_00.py
SQL_Model/: database.db
