[tool.poetry]
name = "poetry"
version = "1.8.0"
description = "poetry"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.21"
sqlalchemy = "^2.0.32"
requests = "^2.32.3"
pydentic = "^0.0.1.dev3"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
